--- a/drills/version-3/public/index.html
+++ b/drills/version-3/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Pixel Art</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
 
-    <script defer src="js/app.js"></script>
+    <script defer src="./js/app.js"></script>
   </body>
 </html>
